New Branch Code

--- a/App.config
+++ b/App.config
@@ -12,6 +12,15 @@
     <add key="Warehouse" value="AK1"/>
     <add key="dbname" value="ALTLIB"/>
     
+    <add key="get_branchPickString" value=" ( A.SO_BR = 83 or A.SO_BR = 89) "/>
+    <add key="get_branchPutString" value="  ( PHBR = 83 or PHBR = 89) "/>
+    <add key="get_branchPartmasterString" value=" ( PMBR = 83 or PMBR = 83) "/>
+    
+    
+    
+     // '''Branch 89 for New  83 for OLD 
+  
+    
    
   </appSettings>
 </configuration>
